# SafeCREW

./: .gitignore  Makefile  pyproject.toml  safecrew.code-workspace
.cursor/rules/: data_science_rules.mdc
safecrew/milan/: sensors_quality.ipynb  supply_points.ipynb
safecrew/milan/analysis/: feltre.ipynb  feltre_second_part.ipynb  supply_points.ipynb  treatment_plants.ipynb
safecrew/milan/data_analysis/: supply_points.ipynb
safecrew/milan/data_preprocessing/: all_samples.ipynb  supply_points.ipynb
safecrew/milan/feature_selection/: feltre.ipynb  supply_points.ipynb
safecrew/milan/first_phase/data_preprocessing/: all_samples.ipynb
safecrew/milan/modelling/: feltre.ipynb  feltre_first_part.ipynb  feltre_second_part.ipynb  lstm_tries.ipynb  nuwee.ipynb  supply_points.ipynb
safecrew/milan/modelling/feltre_best_model/: models.ipynb
safecrew/milan/modelling/lstm_logs/checkpoint/: checkpoint.model.keras
safecrew/milan/modelling/outputs/: event_all_tf.csv  feature_all_tf.csv  prun_all_tf.csv
safecrew/milan/post_reunion_24-04-2024/analysis/: raw_feltre.ipynb  supply_points.ipynb  treatment_plants.ipynb
safecrew/milan/post_reunion_24-04-2024/preprocessing/: first_batch_supply_points.ipynb  supply_points.ipynb
safecrew/milan/preprocessing/: all_samples.ipynb  bactosense_before_dis.ipynb  feltre.ipynb  feltre_prelim.ipynb  first_batch_supply_points.ipynb  supply_points.ipynb
safecrew/milan/reunion_24-04-2024/preprocessing/: feltre.ipynb  supply_points.ipynb
safecrew/old_version/milan/first_phase/data_analysis/: supply_points.ipynb
safecrew/old_version/milan/first_phase/data_preprocessing/: supply_points.ipynb
safecrew/old_version/tarragona/data_analysis/: 1-intermediate.ipynb  2-clean.ipynb
safecrew/old_version/tarragona/data_preprocessing/: 1-integration.ipynb  2-cleaning.ipynb
safecrew/tarragona/: safecrew_tarragona.ipynb
safecrew/tarragona/data_analysis/: 2-clean.ipynb  lab_sensor.ipynb  raw.ipynb
safecrew/tarragona/data_preprocessing/: 1-integration.ipynb  2-cleaning.ipynb  lab_sensor.ipynb
safecrew/tarragona/utils/functions/: normalize_string.py
safecrew/tarragona/utils/lists/: eb0_measure_features.json  eb0_measure_targets.json  eb1_measure_features.json  eb1_measure_targets.json
safecrew/tarragona/utils/mappings/: eb0_features_mapping.json  eb0_features_mapping_clean.json  eb1_features_mapping.json  eb1_features_mapping_clean.json
