[tool.poetry]
name = "safecrew"
version = "0.1.0"
description = ""
authors = ["MassimilianoArca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
jupyter = "^1.0.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
jupyterlab = "^4.0.8"
openpyxl = "^3.1.2"
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
mypy = "^1.6.1"
xlrd = "^2.0.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
seaborn = "^0.13.0"
pathvalidate = "^3.2.0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"
tslearn = "^0.6.3"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
