[tool.poetry]
name = "safecrew"
version = "0.1.0"
description = ""
authors = ["MassimilianoArca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
jupyterlab = "^4.0.8"
openpyxl = "^3.1.2"
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
mypy = "^1.6.1"
xlrd = "^2.0.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
seaborn = "^0.13.0"
pathvalidate = "^3.2.0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"
tslearn = "^0.6.3"
kaleido = "0.2.1"
prophet = "^1.1.5"
miceforest = "^6.0.3"
dtaidistance = "^2.3.12"
datashader = "^0.16.3"
bokeh = "^3.6.2"
holoviews = "^1.20.0"
scikit-image = "^0.24.0"
colorcet = "^3.1.0"
copkmeans = {git = "https://github.com/Behrouz-Babaki/COP-Kmeans"}
plotly = "^5.24.1"
umap-learn = "^0.5.7"
dask = "2024.12.1"
quantnn = "^0.0.5"
optuna = "^4.2.0"
torch = "^2.5.1"
torchvision = "^0.21.0"
tensorboard = "^2.18.0"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
tensorflow = "^2.18.0"
optuna-dashboard = "^0.17.0"
reservoirpy = "^0.3.12"
shap = "0.38.1"
timeshap = "^1.0.4"
vegafusion = {extras = ["embed"], version = "^2.0.2"}
jupyter-contrib-nbextensions = "^0.7.0"
jupyter = "^1.1.1"
notebook = "6.4.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
